--- a/main.css
+++ b/main.css
@@ -1,5 +1,14 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     margin: 0px;
+    width: 100vw;
+}
+main {
+    width: 90%;
+    margin: 0 auto;
 }
 header {
     background-color: #7f807f;
@@ -8,28 +17,55 @@ header {
 }
 header h1 {
     text-align: center;
+    font-size: 50px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color: #52b11b;
+    color: white;
     padding: 25px;
 }
 .week {
-    border-color: #000000;
-    border-style: solid;
+    /* border-color: #000000;
+    border-style: solid; */
     width: 100%;
-    height: 300px;
-    margin: 0px;
-    padding: 5%; 
-    background-color: #52b11b;
+    /* border: 1px red solid; */
+    height: 290px;
+    padding: .5% 5%;
+    display: block;
+    margin: 1px;
+    /* padding: 2px;  */
+}
+.week:nth-child(2n+1){
+    background-color: #148088;
 }
 section {
     border-style: solid;
     border-color: black;
     width: 18%;
-    float: left;
-    margin: 2px;
-    height: 90%;
+    margin-right: 1%;
+    padding: 3px;
+    vertical-align: top;
+    display: inline-block;
+    height: 80%;
+    background-color: #36d0db;
 }
 
 section h2 {
+    text-align: left;
+    text-decoration: underline;
+}
+
+h1 {
+    font-family: 'Times New Roman', Times, serif;
+    text-align: center;
+    /* border: 1px red solid; */
+    color: #148088;
+    margin: 0px;
+}
+
+ div h1:nth-child(2n+1){
+   color: white; 
+ }
+
+h3 {
+    margin-bottom: 0;
     text-align: center;
 }
