--- a/main.css
+++ b/main.css
@@ -4,14 +4,16 @@
 
 body {
     margin: 0px;
-    width: 100vw;
+    width: 100%;
+    background-image: url("https://images.unsplash.com/photo-1516259762381-22954d7d3ad2?ixlib=rb-0.3.5&s=4f097d97eeacf635a30c2f61f783aa92&auto=format&fit=crop&w=1066&q=80");
+    background-size: 100%;
 }
 main {
-    width: 90%;
+    width: 80%;
     margin: 0 auto;
 }
 header {
-    background-color: #7f807f;
+    background-color: #7f807fb9;
     margin: 0px;
     height: 100px;
 }
@@ -22,34 +24,50 @@ header h1 {
     color: white;
     padding: 25px;
 }
-.week {
+.week-container {
     /* border-color: #000000;
     border-style: solid; */
     width: 100%;
     /* border: 1px red solid; */
     height: 290px;
-    padding: .5% 5%;
     display: block;
-    margin: 1px;
-    /* padding: 2px;  */
+    margin: 10px;
+    background-color:#eca241c5;
+    /* border: 1px black solid; */
+    overflow: auto;
+    border-radius: 10px;
 }
-.week:nth-child(2n+1){
-    background-color: #148088;
+
+.week {
+    display: block;
+    margin: 0 auto;
+    /* border: 2px yellow solid; */
+    text-align: justify;
+    text-align-last: center;
 }
+.week-container:nth-child(2n+1){
+    background-color: #65f879d5;
+}
+
 section {
-    border-style: solid;
-    border-color: black;
+    /* border-style: solid;
+    border-color: black; */
     width: 18%;
-    margin-right: 1%;
+    margin: .5%;
     padding: 3px;
     vertical-align: top;
     display: inline-block;
     height: 80%;
-    background-color: #36d0db;
+    background-color: rgb(255, 254, 251);
+    text-overflow: inherit;
+    /* Required for text-overflow to do anything */
+    white-space: nowrap;
+    overflow: auto;
+    border-radius: 10px;
+    
 }
 
 section h2 {
-    text-align: left;
     text-decoration: underline;
 }
 
@@ -57,11 +75,11 @@ h1 {
     font-family: 'Times New Roman', Times, serif;
     text-align: center;
     /* border: 1px red solid; */
-    color: #148088;
+    color: white;
     margin: 0px;
 }
 
- div h1:nth-child(2n+1){
+ main :nth-child(2n+1) h1{
    color: white; 
  }
 
